--- a/WarehouseEcommerce/Views/Theme/ElecTech/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/ElecTech/Shared/_TopHeaderPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿<!-- header start -->
-@using Ganedata.Core.Services
+@using Ganedata.Core.Entities.Domain
 @{
-    var siteProperties = ViewBag.TenantWebsite as caTenantWebsites;
+    var siteProperties = ViewBag.TenantWebsite as TenantWebsites;
 }
 <header>
     <div class="header-top-area hide-this">
