--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -78,7 +78,7 @@
         <div class="modal-dialog modal-lg">
 
             <!-- Modal content-->
-            <div class="modal-content">
+            <div class="modal-content basket-modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Add to Basket</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
