--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
             <!-- Modal content-->
             <div class="modal-content basket-modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Add to Basket</h4>
+                    <h4 class="modal-title">Added to Basket</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
 
                 </div>
