CE2-26 Back in Stock Notification task done Imported from Changeset 2781

--- a/WarehouseEcommerce/Views/Theme/University/Shared/_wishlistItems.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_wishlistItems.cshtml
@@ -28,7 +28,7 @@
                             <div>
                                 <div class="custom-control custom-switch">
                                     <input type="checkbox" class="custom-control-input notification-switch" id="notification-switch-@item.ProductMaster.ProductId" value="@item.ProductMaster.ProductId" @(item.IsNotification ? "checked" : "")>
-                                    <label class="custom-control-label" for="notification-switch-@item.ProductMaster.ProductId">Stock Notification</label>
+                                    <label class="custom-control-label" for="notification-switch-@item.ProductMaster.ProductId">Back in Stock Notification</label>
                                 </div>
                             </div>
                         </td>
